# retroai-agent

./: .env.example  .gitignore  .vercelignore  COMMANDES.txt  JOURNAL.txt  README.md  pingpong.asm  pyproject.toml  requirements.txt  vercel.json
marketplace/: README.md  index.html  registry.js  registry.json
marketplace/plugins/: calculatrice.py  crypto.py  file_ops.py  git.py  git_helper.py  horloge.py  network.py  notes.py  password.py  qrcode.py  sysinfo.py  system_info.py  translate.py  web_search.py
plugins/: README.md  index.html  meteo.py
retroai_agent/: __init__.py  agent_loop.py  api_client.py  config.py  corbeille.py  files.py  image_gen.py  images.py  main.py  memoire.py  modes.py  plugins.py  profile.py  safety.py  sessions.py  setup_cle.py  stats.py  thinking.py  tools.py  tuto.py  ui.py
scripts/: install.ps1  install.sh
snake_game/: CHANGELOG.md  README.md  snake.asm
tests/: test_agent_loop_empty.py  test_agent_loop_prompt.py  test_agent_loop_sessions.py  test_agent_loop_tool_calls.py  test_api_client.py  test_barre_thinking.py  test_boucle_cli_smoke.py  test_config.py  test_files.py  test_images.py  test_jetons.py  test_main_model.py  test_main_sessions.py  test_memoire.py  test_modes.py  test_plugins.py  test_plugins_gestion.py  test_restart.py  test_safety.py  test_sessions.py  test_setup_cle.py  test_stats.py  test_thinking.py  test_tools.py  test_tuto.py  test_ui_historique.py  test_undo_diff_init.py
